Removed rule to fix bug with overlapping multiple rings

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,10 +17,6 @@
     border-radius:8px;
     margin:-.5em 0 0 .2em;
 }
-#events .ring{
-    float:right;
-    margin:-1em 0 0 .2em;
-}
 #event .ring{
     margin-top:.3em;
 }
